--- a/assignments/earththoughts/www/css/jumbotron-narrow.css
+++ b/assignments/earththoughts/www/css/jumbotron-narrow.css
@@ -4,18 +4,32 @@ body {
   padding-bottom: 20px;
   color: white;
 }
-p{
-  color: white;
-}
+
 p {
-  color: yellow;
+  color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+#main_image {
+  background-image: url("https://i.redd.it/fsipwrv7fgkz.jpg");
+  background-color: #17234E;
+  margin-bottom: 0;`enter code here`
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+#main_text {
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
 .footer {
+  color: white;
   padding-right: 15px;
   padding-left: 15px;
 }
